Fix nav on mobile Safari #265
Mobile Safari support of `font-size: 0` is buggy, it keeps the paddings.
Another solution is `font-size: 1px; text-indent: -1px` but that's
too hacky.

--- a/app/assets/stylesheets/thredded/layout/_navigation.scss
+++ b/app/assets/stylesheets/thredded/layout/_navigation.scss
@@ -43,13 +43,15 @@
       a {
         display: block;
         padding: ($thredded-small-spacing / 2) 0 ($thredded-small-spacing / 2) 0;
-        font-size: 0;
       }
       .thredded--icon {
         display: block;
         width: 2rem;
         height: 2rem;
       }
+    }
+    .thredded--nav-text {
+      display: none;
     }
     &--settings {
       @extend %icon-nav-item;
